// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[App] matches snapshot 1`] = `
<div>
  <h1
    class="text-3xl"
  >
    Hello World!
  </h1>
  <ul
    class="list-none"
  />
</div>
`;

exports[`[App] should update after callback 1`] = `
<div>
  <h1
    class="text-3xl"
  >
    Hello World!
  </h1>
  <ul
    class="list-none"
  >
    <li>
      GET
       
      https://example.com
    </li>
  </ul>
</div>
`;
